# sam2-contrails

./: .gitignore  .gitmodules  CLAUDE.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  conftest.py  pyproject.toml
contrailtrack/: __init__.py  cli.py
contrailtrack/campaign/: __init__.py  era5_local.py  fleet.py  frames.py  pipeline.py  solar.py
contrailtrack/data/: coco.py  prompt_reader.py  video.py
contrailtrack/eval/: metrics.py
contrailtrack/inference/: _engine.py  predictor.py
contrailtrack/model/: loader.py
contrailtrack/output/: coco.py
contrailtrack/prompts/: __init__.py  cocip.py  dry_advection.py  encoding.py  projection.py  writer.py
demo/backend/server/inference/: predictor.py
docs/: generate_guide_docx.py  generate_guide_images.py
examples/: 01_prepare_data.py  02_fleet_from_traffic.py  03_generate_prompts.py  04_run_inference.py  05_evaluate.py  06_render_video.py  07_labelling_campaign.py  visualize_campaign.py
paper/: TRAILVISION_journal.tex  TRAILVISION_journal_v2.tex
paper/scripts/: analyze_stats.py  fig4_ap_data.csv  latency_results.json  paper_style.py  plot_ablation.py  plot_attribution_scene.py  plot_completeness_dist.py  plot_discrimination_roc.py  plot_examples.py  plot_failure_modes.py  plot_graphical_abstract.py  plot_metrics_ci.py  plot_prompt_comparison.py  plot_variant_comparison.py  plot_window_comparison.py  stats_results.json
sam2/: benchmark.py  sam2_video_predictor.py
sam2/configs/sam2.1/: sam2.1_hiera_b+.yaml  sam2.1_hiera_b+_GVCCS_original.yaml  sam2.1_hiera_b+_GVCCS_ternary.yaml
sam2/configs/sam2.1_training/: sam2.1_hiera_b+_GVCCS_finetune_age.yaml  sam2.1_hiera_b+_GVCCS_finetune_original.yaml  sam2.1_hiera_b+_GVCCS_finetune_ternary.yaml
sam2/modeling/: sam2_base.py
sam2/modeling/sam/: mask_decoder.py
scripts/: analyse_glitch_fix.py  count_glitches.py  diagnose_multi_case.py  diagnose_teleportation.py  diagnose_tensors.py
tests/: test_campaign_era5.py  test_campaign_fleet.py  test_campaign_frames.py  test_campaign_pipeline.py  test_campaign_solar.py  test_contrailtrack_cocip.py  test_contrailtrack_data.py  test_contrailtrack_encoding.py  test_contrailtrack_output.py  test_contrailtrack_projection.py  test_contrailtrack_writer.py  test_gradient_accumulation.py  test_lifecycle_pipeline.py  test_object_centric_sampling.py  test_predictor.py  test_ternary_pipeline.py  test_transforms.py
training/: train.py  trainer.py
training/dataset/: transforms.py  vos_dataset.py  vos_raw_dataset.py  vos_sampler.py  vos_segment_loader.py
training/model/: sam2.py
training/utils/: checkpoint_utils.py  data_utils.py  logger.py
